Add basic structure and style for maintext

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,3 +74,27 @@
     width: 100%;
 }
 
+
+.maintext {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: #fff;
+}
+
+.maintext h1 {
+    text-transform: uppercase;
+    padding: 20px;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 100px;
+}
+
+
+.maintext p {
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    padding: 40px;
+    float: right;
+}
