--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@
 
 
 .logo {
-    width: 300px;
+    width: 500px;
     cursor: pointer;
     padding: 40px;
 }
@@ -86,15 +86,57 @@
 
 .maintext h1 {
     text-transform: uppercase;
-    padding: 20px;
+    margin-top: 400px;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 100px;
+    font-size: 90px;
 }
 
 
 .maintext p {
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
-    padding: 40px;
-    float: right;
+    line-height: 30px;
+    letter-spacing: 3px;
+    margin-top: 60px;
+}
+
+
+button {
+    width: 180px;
+    padding: 20px 0;
+    margin: 100px 0px;
+    text-align: center;
+    border-radius: 30px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    border: 3px solid #4682B4;
+    background: transparent;
+    color: #fff;
+    cursor: pointer;
+    letter-spacing: 3px;
+    position: relative;
+    overflow: hidden;
+}
+
+
+span {
+    background: #4682B4;
+    height: 100%;
+    width: 0;
+    border-radius: 30px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: 0.7s;
+}
+
+
+button:hover span {
+    width: 100%;
+}
+
+
+button:hover {
+    border: none;
 }
